# IQC

./: COM_2.py  IQC-TH2837.spec  IQC.spec  LOCALIZATION.md  README.md  cmds.py  main.py  pyproject.toml  test_appstate.py  test_full_language.py  test_translate.py
ceshi/: QFileDialog_.py  QMessage_.py  QThread.py
qss/: dark.qss  light.qss
src/: COM_2.py  main.py  mn_2837.py  mn_5235.py
src/5237/: Protocol.py
src/TH2837/: __init__.py  cmds.py
src/customAuto/: __init__.py  catuo.py
src/template/: MainWin.ui  MainWin_ui.py  MoreSettings.ui  MoreSettings_ui.py  __init__.py  commandWin.ui  commandWin_ui.py  iqc.qrc  iqc_rc.py  start.ui  ui_MainWin.py  ui_MoreSettings.py  ui_commandWin.py  ui_start.py
src/template_ui/: ui_MainWin.py  ui_com.py
src/th5235/: Protocol.py
src/ui/: Win2837.cpp  Win2837.py  Win5235.py  __init__.py  app_state.py  cmdWin.py  comDlg.py  language_dialog.py  language_manager.py  mainWin.py  setsDlg.py  startDlg.py
template_ui/: MainWin.ui  com.ui  com_ui.py
translations/en/: app_en.qm  app_en.ts
translations/zh/: app_zh.qm  app_zh.ts
ui/: __init__.py
介绍/: EMI测试自动化.pptx  武汉IQC-TH2837设备--数据获取自动化软件.pptx
